Tres primeras secciones ok

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="#cuarta" class="nav-link">Accordion</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#cuarta" class="nav-link">Contact</a>
+                        <a href="#quinta" class="nav-link">Contact</a>
                     </li>
                     <form class="formNavbar">
                         <input type="text" class="inputNavbar">
@@ -64,7 +64,14 @@
                 <p class="nameIntro">Hi, I’m <span class="nameBold">Jorge Salmerón</span>, a junior frontend
                     developer.
                 </p>
-                <p class="textIntro">You’ll find next a showcase of a few of my personal projects.</p>
+                <p class="textIntro">You will find five personal projects in this portfolio: <a href="#"
+                        class="textLinks">Video</a>, <a href="#segunda" class="textLinks">Review</a>,
+                    <a href="#tercera" class="textLinks">Restaurant</a>,
+                    <a href="#cuarta" class="textLinks">Accordion</a>, and <a href="#quinta"
+                        class="textLinks">Footer</a>. In each one, I try to showcase my
+                    skills in HTML, CSS, and JavaScript. I hope
+                    you enjoy them.
+                </p>
             </div>
         </div>
         <!-- CONTAINER CARD CENTRAL CON SCROLL - LOGOS - PLAYBTNS -->
@@ -75,8 +82,9 @@
                     <h3 class="videoProject">Video Project</h3>
                     <!-- CONTAINER DESCRIPTION PARAGRAFHS ON SCROLL -->
                     <div class="descExplain">
-                        <p>For this project, I created a visually stunning background video with custom play/pause
-                            controls in a website section, optimized for web speed.
+                        <p class="firstParagraph">For this project, I created a visually attractive background video
+                            with custom play/pause
+                            controls in a website section.
                         </p>
                         <p>This project required a strong understanding of HTML5 video elements, JavaScript, and CSS
                             animations to create a seamless user experience.
@@ -174,7 +182,7 @@
                             <!-- MAIN CONTAINER SLIDE ROMA -->
                             <div class="slide slide1">
                                 <article class="mainReview img firstReview">
-                                    <div class="imgContainerReview">
+                                    <div class="imgContainerRoma">
                                         <h2 id="author" class="authorReview">Rome</h2>
                                     </div>
                                     <hr class="cardHr">
@@ -182,24 +190,21 @@
                                         <div class="itemScrollXReview">
                                             <p id="info" class="infoReview">"Rome is a captivating city that offers a
                                                 perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                                Colosseum to the Vatican, the food to the people."
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"Rome is an enchanting city that captures
+                                                your heart. Its ancient ruins and cobblestone streets transport you to
+                                                another era. The food is delicious. An unforgettable experience!"
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"Rome is a dream come true. The beauty of
+                                                its historic landmarks, such as the Colosseum and the Vatican, takes
+                                                your breath away. Can't wait to go back!"
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
@@ -209,32 +214,29 @@
                             <!-- MAIN CONTAINER SLIDE NEW YORK -->
                             <div class="slide slide2">
                                 <article class="mainReview img firstReview">
-                                    <div class="imgContainerReview">
+                                    <div class="imgContainerNewYork">
                                         <h2 id="author" class="authorReview">New York</h2>
                                     </div>
                                     <hr class="cardHr">
                                     <div class="containerScrollXReview">
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"New York City is an electrifying metropolis
+                                                that never sleeps. Its iconic skyline, bustling streets, and vibrant
+                                                energy are truly mesmerizing."
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"New York City is a melting pot of endless
+                                                possibilities. From the bright lights of Times Square to the serene
+                                                beauty of Central Park, there's something for everyone. "
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"New York City is a captivating blend of
+                                                old-world charm and modern dynamism. The bustling streets, iconic
+                                                landmarks like the Statue of Liberty, and world-class Broadway shows."
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
@@ -244,32 +246,29 @@
                             <!-- MAIN CONTAINER SLIDE MADRID -->
                             <div class="slide slide3">
                                 <article class="mainReview img firstReview">
-                                    <div class="imgContainerReview">
+                                    <div class="imgContainerMadrid">
                                         <h2 id="author" class="authorReview">Madrid</h2>
                                     </div>
                                     <hr class="cardHr">
                                     <div class="containerScrollXReview">
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"Madrid is a vibrant and cosmopolitan city
+                                                that captures the essence of Spain. Its magnificent architecture, such
+                                                as the Royal Palace and Puerta del Sol, reflects its rich history. "
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"Madrid is a city that enchants with its
+                                                artistic flair and captivating energy. From the world-renowned Prado
+                                                Museum to the bustling markets of Mercado de San Miguel."
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
                                         <div class="itemScrollXReview">
-                                            <p id="info" class="infoReview">"Rome is a captivating city that offers a
-                                                perfect blend of ancient history and modern-day culture. From the
-                                                Colosseum to the Vatican, the food to the people, Rome is a must-visit
-                                                destination."
+                                            <p id="info" class="infoReview">"Madrid is a city that embraces you with its
+                                                warm hospitality and endless charm. The grand boulevards, like Gran Vía,
+                                                are lined with stunning architecture and high-end shops."
                                             <p class="NamePost">John Doe <span>Aplir, 2023</span></p>
                                             </p>
                                         </div>
@@ -301,10 +300,11 @@
                     <div class="headDivRest">
                         <h3 class="projectNameRest">Menu Project</h3>
                         <div class="featExplainRest">
-                            <p>I built a review slider project that allows users to view customer reviews in a dynamic
-                                and interactive way. Using HTML, CSS, and JavaScript, I created a front-end interface
-                                that displays reviews in a slider format, with each review transitioning seamlessly to
-                                the next one.
+                            <p>I developed a menu project for a restaurant Using HTML, CSS, and JavaScript, that
+                                showcases photos and
+                                descriptions of dishes. It features buttons to filter by food type, beverage, and
+                                dessert. It provides an interactive and convenient experience for users, making it easy
+                                to choose their favorite options.
                             </p>
                         </div>
                     </div>
@@ -454,7 +454,7 @@
                                 <div class="logoPlusCompanyDiv">
                                     <img class="imgLogoFooter"
                                         src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo.svg">
-                                    <a href="">COMPANY</a>
+                                    <a id="quinta" href="">COMPANY</a>
                                 </div>
                                 <div class="redesFooter">
                                     <h3 class="titleRedes">Síguenos</h3>
