Corrección font btns menu, text plato, ortografía general

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             elements, JavaScript, and CSS animations to create a seamless user experience.
                         </p>
                         <p id="content-es" class="firstParagraph idioma" style="display: none;">Para este proyecto, creé
-                            un vídeo de fóndo visualmente atractívo con controles personalizados de play/pausa. Es la
+                            un vídeo de fondo visualmente atractivo con controles personalizados de play/pausa. Es la
                             primera sección de la web.
                         </p>
                         <p id="content-es" class="idioma" style="display: none;">Este proyecto requería un sólido
