--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="btnDivCounterUno divNewPrueba">
+                            <div class="btnDivCounterUno divNewCounter">
                                 <h3 class="numberCounter">0</h3>
                                 <div class="divNewBtns">
                                     <button id="dec" class="btns btnIncDes decrease">
